feat: adicionando rota de deletar item de uma categoria
